[gd_scene load_steps=9 format=3 uid="uid://bq6w5cbmrodmp"]

[ext_resource type="Texture2D" uid="uid://7i5dpbv6mww3" path="res://main/UI/menu/menu.tres" id="1_fd3nf"]
[ext_resource type="Script" uid="uid://0ld4l0dtkpa6" path="res://main/UI/credits/credits.gd" id="1_uqc05"]
[ext_resource type="Texture2D" uid="uid://bspdfof1ikrcx" path="res://main/UI/menu/menu2.tres" id="3_qi0qp"]
[ext_resource type="PackedScene" uid="uid://b3fc1acjxjhk8" path="res://main/globals/SoundManager.tscn" id="9_b5238"]

[sub_resource type="Gradient" id="Gradient_qi0qp"]
colors = PackedColorArray(0.3137255, 0.09803922, 0.65882355, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_s68ik"]
gradient = SubResource("Gradient_qi0qp")
fill_from = Vector2(0.5, 0.6)
fill_to = Vector2(0.5, 0.1)
metadata/_snap_enabled = true

[sub_resource type="InputEventAction" id="InputEventAction_qi0qp"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_s68ik"]
events = [SubResource("InputEventAction_qi0qp")]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqc05")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2"]
z_index = 2
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 100

[node name="TextureRect" type="TextureRect" parent="MarginContainer2"]
z_index = 2
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_fd3nf")
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="MarginContainer2"]
layout_mode = 2
texture = ExtResource("3_qi0qp")

[node name="TextureRect3" type="TextureRect" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
texture = SubResource("GradientTexture2D_s68ik")
expand_mode = 2
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
z_index = 2
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 55

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "< A U T O R >"

[node name="Autor" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
text = "M E N S H I K O V   M A X I M"
flat = true

[node name="Assets" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "< A U T O R S   O F   A S S E T S >"

[node name="Buttons" type="VBoxContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="CreativeKind" type="Button" parent="MarginContainer2/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_default_cursor_shape = 2
text = "C r e a t i v e K i n d"
flat = true

[node name="LuckyLoops" type="Button" parent="MarginContainer2/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
text = "L u c k y L o o p s "
flat = true

[node name="Free" type="Button" parent="MarginContainer2/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
text = "Free and Premium Game Assets (GUI, Sprite, Tilesets)"
flat = true

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
text = ". . ."

[node name="Sounds" type="Button" parent="MarginContainer2/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_default_cursor_shape = 2
text = "S O U N D S"
flat = true

[node name="Back" type="Button" parent="MarginContainer2/VBoxContainer"]
z_index = 5
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_s68ik")
text = "B A C K"
flat = true

[node name="SoundManager" parent="." instance=ExtResource("9_b5238")]

[connection signal="pressed" from="MarginContainer2/VBoxContainer/Autor" to="." method="_on_autor_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/Back" to="." method="_on_back_pressed"]
